# spt_candl_data

./: .gitignore  README.rst  pyproject.toml
cobaya/SPT3G_D1/: cobaya_ttteee_musepp.yaml  input_ttteee_musepp.covmat
cobaya/SPT3G_D1_TnE/: cobaya_ee.yaml  cobaya_te.yaml  cobaya_tt.yaml  cobaya_ttteee.yaml  cobaya_ttteee_lite.yaml  input_ee.covmat  input_te.covmat  input_tt.covmat  input_ttteee.covmat
cosmosis/examples/: SPT3G_D1_TnE_candl.ini  SPT3G_D1_TnE_candl_priors.ini  SPT3G_D1_TnE_candl_values.ini  SPT3G_D1_TnE_lite_candl.ini  SPT3G_D1_TnE_lite_candl_priors.ini  SPT3G_D1_TnE_lite_candl_values.ini
montepython/SPT3G_D1_TnE_candl/: SPT3G_D1_TnE_candl.covmat  SPT3G_D1_TnE_candl.data  SPT3G_D1_TnE_candl_template.param  __init__.py
montepython/SPT3G_D1_TnE_lite_candl/: SPT3G_D1_TnE_lite_candl.covmat  SPT3G_D1_TnE_lite_candl.data  SPT3G_D1_TnE_lite_candl_template.param  __init__.py
spt_candl_data/: __init__.py  spt_candl_data.py
spt_candl_data/SPT3G_D1_TnE/: SPT3G_D1_TnE.yaml  SPT3G_D1_TnE_index.yaml
spt_candl_data/SPT3G_D1_TnE/lite/: SPT3G_D1_TnE_lite.yaml
spt_candl_data/SPT3G_D1_TnE/subsets/: SPT3G_D1_EE.yaml  SPT3G_D1_EE_150x150.yaml  SPT3G_D1_EE_150x220.yaml  SPT3G_D1_EE_220x220.yaml  SPT3G_D1_EE_90x150.yaml  SPT3G_D1_EE_90x220.yaml  SPT3G_D1_EE_90x90.yaml  SPT3G_D1_TE.yaml  SPT3G_D1_TEEE.yaml  SPT3G_D1_TE_150x150.yaml  SPT3G_D1_TE_150x220.yaml  SPT3G_D1_TE_220x220.yaml  SPT3G_D1_TE_90x150.yaml  SPT3G_D1_TE_90x220.yaml  SPT3G_D1_TE_90x90.yaml  SPT3G_D1_TT.yaml  SPT3G_D1_TTTE.yaml  SPT3G_D1_TT_90x150.yaml  (+11 more)
tutorial_notebooks/: SPT3G_D1_TnE_tutorial.ipynb
